<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move_ac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
         />

    <Button
        android:id="@+id/btn_move_with_dat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btn_move_with_obj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_object"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btn_dial_numb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:id="@+id/btn_move_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/move_with_result" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/result_from_activity"
        android:textSize="24sp"/>

</LinearLayout>